# gearmulator

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  ISSUES.md  README.md  base.cmake  build_android.bat  build_cmake_android.bat  build_cmake_android_abi.bat  build_linux.sh  build_linux_console.sh  build_linux_wsl.sh  build_mac.sh  build_win32.bat  build_win64.bat  build_win64_vs19.bat  deploy.cmake  linux_dependencies.sh  xcodeversion.cmake
source/: .clang-format  .gitignore  CMakeLists.txt  changelog.cmake  exporttarget.cmake  findvst2.cmake  juce.cmake  macsetup.cmake  macsetup.command.in  runAuValidation.cmake  skins.cmake  skins.h.in
source/68kEmu/: CMakeLists.txt  gpt.cpp  gpt.h  hdi08.cpp  hdi08.h  logging.cpp  logging.h  mc68k.cpp  mc68k.h  peripheralBase.cpp  peripheralBase.h  peripheralTypes.h  port.cpp  port.h  qsm.cpp  qsm.h  qspi.cpp  qspi.h  sim.cpp  sim.h
source/Android/: .gitignore
source/baseLib/: CMakeLists.txt  binarystream.cpp  binarystream.h  commandline.cpp  commandline.h  compilerdefs.h  configFile.cpp  configFile.h  endian.h  event.cpp  event.h  filesystem.cpp  filesystem.h  hybridcontainer.h  logging.cpp  logging.h  md5.cpp  md5.h  os.cpp  os.h  propertyMap.cpp  propertyMap.h  semaphore.h  threadtools.cpp  threadtools.h  trigger.cpp  trigger.h
source/bridge/: CMakeLists.txt
source/changelogGenerator/: CMakeLists.txt  changelogGenerator.cpp
source/commandlineGenerator/: CMakeLists.txt  commandlineGenerator.cpp
source/fst/: README.md
source/hardwareLib/: CMakeLists.txt  am29f.cpp  am29f.h  dspBootCode.cpp  dspBootCode.h  haltDSP.cpp  haltDSP.h  i2c.cpp  i2c.h  i2cFlash.cpp  i2cFlash.h  lcd.cpp  lcd.h  lcdfonts.cpp  lcdfonts.h  sciMidi.cpp  sciMidi.h  syncUCtoDSP.h
source/jucePlugin/: CMakeLists.txt  ParameterNames.h  PluginEditor.cpp  PluginEditor.h  PluginEditorSkin2.cpp  PluginEditorSkin2.h  PluginEditorState.cpp  PluginEditorState.h  PluginProcessor.cpp  PluginProcessor.h  VirusController.cpp  VirusController.h  VirusParameter.cpp  VirusParameter.h  VirusParameterBinding.cpp  VirusParameterBinding.h  VirusParameterDescription.cpp  VirusParameterDescription.h  VirusParameterDescriptions.cpp  VirusParameterDescriptions.h  VirusParameterType.h  parameterDescriptions_C.json  parameterDescriptions_Snow.json  parameterDescriptions_TI.json  parameterDescriptions_mq.json  version.h  version.h.in
source/jucePluginData/: CMakeLists.txt  cancel.psd  check.psd  chevron_right.psd  circle.psd  link.psd  lock.psd  pm-add-folder.psd  pm-add.psd  pm-dot.psd  tus_colorpicker.rcss  tus_colorpicker.rml  tus_default.rcss  tus_juceskin.rcss  tus_midilearn_dialog.rcss  tus_midilearn_dialog.rml  tus_patchmanager.rcss  tus_patchmanager.rml  tus_settings.rcss  tus_settings.rml  tus_settings_dspaudio.rcss  tus_settings_dspaudio.rml  tus_settings_dspbridge.rcss  tus_settings_dspbridge.rml  tus_settings_gui.rml  tus_settings_midi.rcss  tus_settings_midi.rml  tus_settings_midilearn.rcss  tus_settings_midilearn.rml  tus_settings_skin.rcss  tus_settings_skin.rml
source/jucePluginEditorLib/: CMakeLists.txt  createVersionDateTime.cmake  dragAndDropObject.cpp  dragAndDropObject.h  filetype.cpp  filetype.h  focusedParameter.cpp  focusedParameter.h  focusedParameterTooltip.cpp  focusedParameterTooltip.h  imagePool.cpp  imagePool.h  lcd.cpp  lcd.h  led.cpp  led.h  mcpDomTools.cpp  mcpDomTools.h  mcpPatchManagerTools.cpp  mcpPatchManagerTools.h  midiPorts.cpp  midiPorts.h  parameterOverlay.cpp  parameterOverlay.h  parameterOverlays.cpp  parameterOverlays.h  partbutton.cpp  partbutton.h  patchbrowser.cpp  patchbrowser.h  patchmanager.cpp  patchmanager.h  patchmanagertree.cpp  patchmanagertreeitem.cpp  pluginDataModel.cpp  pluginDataModel.h  pluginEditor.cpp  pluginEditor.h  pluginEditorState.cpp  pluginEditorState.h  (+40 more)
source/jucePluginLib/: .gitignore  CMakeLists.txt  bypassBuffer.cpp  bypassBuffer.h  clipboard.cpp  clipboard.h  controller.cpp  controller.h  controllermap.cpp  controllermap.h  dummydevice.cpp  dummydevice.h  event.cpp  event.h  filetype.cpp  filetype.h  midiLearnManager.cpp  midiLearnManager.h  midiLearnMapping.cpp  midiLearnMapping.h  midiLearnPreset.cpp  midiLearnPreset.h  midiLearnTranslator.cpp  midiLearnTranslator.h  midipacket.cpp  midipacket.h  midiports.cpp  midiports.h  parameter.cpp  parameter.h  parameterbinding.cpp  parameterbinding.h  parameterdescription.cpp  parameterdescription.h  parameterdescriptions.cpp  parameterdescriptions.h  parameterlink.cpp  parameterlink.h  parameterlinks.cpp  parameterlinks.h  (+23 more)
source/juceRmlPlugin/: CMakeLists.txt  knobConverter.cpp  rmlControllerLink.cpp  rmlControllerLink.h  rmlLuaParameters.cpp  rmlLuaParameters.h  rmlParameterBinding.cpp  rmlParameterBinding.h  rmlParameterRef.cpp  rmlParameterRef.h  rmlParameterToElementsBinding.cpp  rmlParameterToElementsBinding.h  rmlPlugin.cpp  rmlPlugin.h  rmlPluginContext.cpp  rmlPluginContext.h  rmlPluginDocument.cpp  rmlPluginDocument.h  rmlTabGroup.cpp  rmlTabGroup.h
source/juceRmlUi/: CMakeLists.txt  MetalContext.h  MetalContext.mm  RmlUi_Renderer_GL2.cpp  RmlUi_Renderer_GL2.h  RmlUi_Renderer_GL3.cpp  RmlUi_Renderer_GL3.h  RmlUi_Renderer_Metal.h  RmlUi_Renderer_Metal.mm  frameRateLimiter.cpp  frameRateLimiter.h  juceRmlComponent.cpp  juceRmlComponent.h  juceRmlComponentConfig.h  juceRmlDrag.cpp  juceRmlDrag.h  juceRmlLookAndFeel.cpp  juceRmlLookAndFeel.h  juceRmlUi.cpp  juceRmlUi.h  rmlColorPicker.cpp  rmlColorPicker.h  rmlContext.h  rmlDataProvider.h  rmlDocuments.h  rmlDragData.h  rmlDragSource.cpp  rmlDragSource.h  rmlDragTarget.cpp  rmlDragTarget.h  rmlElemButton.cpp  rmlElemButton.h  rmlElemCanvas.cpp  rmlElemCanvas.h  rmlElemComboBox.cpp  rmlElemComboBox.h  rmlElemKnob.cpp  rmlElemKnob.h  rmlElemList.cpp  rmlElemList.h  (+55 more)
source/juceUiLib/: CMakeLists.txt  button.cpp  button.h  buttonStyle.cpp  buttonStyle.h  comboboxStyle.cpp  comboboxStyle.h  condition.cpp  condition.h  controllerlink.cpp  controllerlink.h  editor.cpp  editor.h  editorInterface.h  hyperlinkbuttonStyle.cpp  hyperlinkbuttonStyle.h  (+26 more)
(+1360 files in other folders)
